--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <title>Recipe Book</title>
+        <link rel="stylesheet" href="Recipes/Styles.css" />
     </head>
-    <body>
+    <body class = "backroundindex">
         <h1>Recipe Book</h1>
         <ul>
             <li><a href="Recipes/Steak.html">Steak</a></li>
-        <li><a href="Recipes/Pasta.html">Pasta</a></li>
-        <li><a href="Recipes/Brownie.html">Brownie</a></li>
+            <li><a href="Recipes/Pasta.html">Pasta</a></li>
+            <li><a href="Recipes/Brownie.html">Brownie</a></li>
         </ul>
     
     </body>
