--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Recipe Book</title>
-        <link rel="stylesheet" href="Recipes/Styles.css" />
-    </head>
-    <body class = "backroundindex">
-        <h1>Recipe Book</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Title</title>
+    <script src="Script.js"></script> <!--linking styles and java-->
+    <link rel="stylesheet" href="Styles.css" />
+  </head>
+  <body>
+    <div class="background">
+      <h1>Matthew Oppenheimer's Gaming Career</h1> <!--main header-->
+      <div class="links">
         <ul>
-            <li><a href="Recipes/Steak.html">Steak</a></li>
-            <li><a href="Recipes/Pasta.html">Pasta</a></li>
-            <li><a href="Recipes/Brownie.html">Brownie</a></li>
-        </ul>
-    
-    </body>
+          <li><a href="About.html">About</a></li>
+
+          <li><a href="GamesPlayed.html">Games Played</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+        </ul> <!--links to pages to learn more about matthew-->
+      </div>
+      <img class="gameimage" src="Images/IMG_0777.JPG" /><!--picture of matthew-->
+    </div>
+  </body>
 </html>
